# civil-petition-ai

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  DATA_MODEL.md  Dockerfile  E_GOV_FRAMEWORK_VERSION.md  OPENCLAW_PLAYBOOK.md  README.md  Recommended GitHub Folder Structure  SPEC.md  Structural Design Principles  TASKS.md  TEST_STRATEGY.md  White_paper  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
database/: package.json  schema.prisma  schema.test.prisma  seed.ts
docs/: API_CONTRACTS.md  ARCHITECTURE.md  AUDIT_MODEL.md  BRANCH_STRATEGY.md  DATA_MODEL.md  SPEC.md  TASKS.md
prisma/: schema.prisma  seed.js  seed.ts
rules/: consistency_phrases.ko.yml  forbidden_claims.ko.yml  pii_patterns.yml  rule_config.yml
scripts/: cleanup.ts  worker.ts
src/: api.js  app.js  app.ts  audit-matcher.js  audit-matcher.ts  auth.ts  config.js  dataStore.js  db.js  embedding.js  embedding.ts  legalApiAdapter.ts  models.ts  petition-service.js  petition-service.ts  pipeline.js  rbac.js  server.js  server.ts  store.js  types.ts
test/: app.test.js  beta-mode.test.js  integration.test.js  integration.test.ts
tests/: audit-log.test.js  audit-matcher.test.js  audit-matcher.test.ts  auditRiskEngine.test.js  draft-engine.test.js  draftEngine.test.ts  embedding-openai.test.js  embedding-openai.test.ts  export.test.js  generateDraft.integration.test.ts  generateDraftRoute.test.mjs  lawApiClient.test.mjs  legalService.test.mjs  openaiClient.test.ts  package.json  pii.test.js  (+9 more)
(+135 files in other folders)
